<resources>
    <string name="app_name">HouseBuddy2</string>
    <string name="title_home">Home</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_browse">Browse</string>
    <string name="title_profile">Profile</string>
    <string name="title_more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format" />
    <string name="send">send</string>
</resources>